--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,18 @@
       <artifactId>weld-servlet</artifactId>
       <version>${weld.servlet.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.6.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-hikaricp</artifactId>
+      <version>5.2.15.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>FashionWebEcommerce</finalName>
