--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
     <servlet.api.version>3.1.0</servlet.api.version>
     <sitemesh.version>2.4.2</sitemesh.version>
     <mysql.version>8.0.30</mysql.version>
-    <weld.servlet.version>1.1.0.Final</weld.servlet.version>
+    <weld.servlet.version>2.4.8.Final</weld.servlet.version>
+
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
   </properties>
@@ -70,6 +71,16 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-hikaricp</artifactId>
       <version>5.2.15.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.36</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.36</version>
     </dependency>
   </dependencies>
   <build>
