--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
       <version>5.0.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.9.3</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>FashionWebEcommerce</finalName>
