thong bao loi va cn dang ky

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,3 +1,5 @@
-username_password_invalid = Tài kho?n ho?c m?t kh?u không h?p l?
-not_login = Không th? ??ng nh?p
-not_permission = Không có quy?n ??ng nh?p
+username_password_invalid = Khong hop le
+not_login = Khong the dang nhap
+not_permission = Khong co quyen dang nhap
+register_success = Dang ky thanh cong
+register_failed = Dang ky that bai
