--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -3,3 +3,7 @@ not_login = Khong the dang nhap
 not_permission = Khong co quyen dang nhap
 register_success = Dang ky thanh cong
 register_failed = Dang ky that bai
+duplicate_email = Email bi trung lap
+duplicate_phone = So dien thoai bi trung lap
+duplicate_username = Ten dang nhap bi trung lap
+duplicate_information =  Thong tin dang ky bi trung lap
