--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
       <version>${commons-beanutils.version}</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>5.8.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>FashionWebEcommerce</finalName>
