--- a/pom.xml
+++ b/pom.xml
@@ -30,18 +30,10 @@
     </dependency>
 
 
-<!--    <dependency>-->
-<!--      <groupId>javax.servlet</groupId>-->
-<!--      <artifactId>jsp-api</artifactId>-->
-<!--      <version>${jsp.api.version}</version>-->
-<!--    </dependency>-->
-
-    <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
     <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>javax.servlet.jsp-api</artifactId>
-      <version>2.3.3</version>
-      <scope>provided</scope>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>${jsp.api.version}</version>
     </dependency>
 
     <dependency>
