--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,17 @@
     </dependency>
 
 
+<!--    <dependency>-->
+<!--      <groupId>javax.servlet</groupId>-->
+<!--      <artifactId>jsp-api</artifactId>-->
+<!--      <version>${jsp.api.version}</version>-->
+<!--    </dependency>-->
+
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>${jsp.api.version}</version>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.3</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
