verify otp when registered

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -7,3 +7,6 @@ duplicate_email = Email bi trung lap
 duplicate_phone = So dien thoai bi trung lap
 duplicate_username = Ten dang nhap bi trung lap
 duplicate_information =  Thong tin dang ky bi trung lap
+verify_success = Xac thuc thanh cong
+verify_failed = Sai OTP 5 lan, hay yeu cau gui lai OTP
+verify_retry = Ma OTP khong dung, vui long thu lai
