--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,19 @@
       <version>2.11.0</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.5.5</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>FashionWebEcommerce</finalName>
