--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,27 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.13.0</version> <!-- Hoặc phiên bản Jackson phù hợp với dự án của bạn -->
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-imaging</artifactId>
+      <version>1.0-alpha3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.coobird</groupId>
+      <artifactId>thumbnailator</artifactId>
+      <version>0.4.14</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-webp -->
+    <dependency>
+      <groupId>com.twelvemonkeys.imageio</groupId>
+      <artifactId>imageio-webp</artifactId>
+      <version>3.10.1</version>
+    </dependency>
+
+
+
 
 
   </dependencies>
