--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,20 @@
       <version>2.11.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.websocket</groupId>
+      <artifactId>javax.websocket-api</artifactId>
+      <version>1.1</version> <!-- Hoặc version mới hơn tùy theo yêu cầu -->
+    </dependency>
+
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.1.1</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
   <build>
     <finalName>FashionWebEcommerce</finalName>
