--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.14.9</version>
+    </dependency>
+
+
   </dependencies>
   <build>
     <finalName>FashionWebEcommerce</finalName>
