--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -10,5 +10,6 @@ duplicate_information =  Thong tin dang ky bi trung lap
 verify_success = Xac thuc thanh cong
 verify_failed = Sai OTP 5 lan, hay yeu cau gui lai OTP
 verify_retry = Ma OTP khong dung, vui long thu lai
+unverified = Tai khoan chua duoc xac thuc, hay xac thuc tai khoan
 not_found_user = Khong tim thay username va email
 not_match_password = Nhap lai mat khau khong khop
