OTP het han, gui OTP Moi

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -13,3 +13,4 @@ verify_retry = Ma OTP khong dung, vui long thu lai
 unverified = Tai khoan chua duoc xac thuc, hay xac thuc tai khoan
 not_found_user = Khong tim thay username va email
 not_match_password = Nhap lai mat khau khong khop
+expired_otp = Ma OTP da het han, OTP moi da duoc gui den email
