--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -12,3 +12,4 @@ verify_failed = Sai OTP 5 lan, hay yeu cau gui lai OTP
 verify_retry = Ma OTP khong dung, vui long thu lai
 not_found_user = Khong tim thay username va email
 not_match_password = Nhap lai mat khau khong khop
+username_is_block = Tai khoan da bi khoa vui long lien he lai chung toi de giai quyet
