--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -18,4 +18,8 @@ expired_otp = Ma OTP da het han, OTP moi da duoc gui den email
 token_invalid = Chuoi xac thuc khong hop le. Vui long dang nhap lai
 not_permission_access = Khong duoc phep truy cap.
 token_expired = Tai khoan dang nhap da het han. Vui long dang nhap lai
+username_not_null=Ten dang nhap khong duoc de trong
+password_not_null = Mat khau khong duoc de trong
+username_not_nullpassword_not_null = Ten dang nhap va mat khau khong duoc de trong
+
 
