sua message utf-8

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,5 +1,4 @@
-username_password_invalid = Khong hop le
-not_login = Khong the dang nhap
+username_password_invalid = Tên đăng nhập hoặc mật khẩu không hợp lệ.
 not_permission = Khong co quyen dang nhap
 register_success = Dang ky thanh cong
 register_failed = Dang ky that bai
@@ -13,13 +12,14 @@ verify_retry = Ma OTP khong dung, vui long thu lai
 unverified = Tai khoan chua duoc xac thuc, hay xac thuc tai khoan
 not_found_user = Khong tim thay username va email
 not_match_password = Nhap lai mat khau khong khop
-username_is_block = Tai khoan da bi khoa vui long lien he lai chung toi de giai quyet
+username_is_block = Tài khoản của bạn đã bị khóa do vi phạm điều khoản. Vui lòng liên hệ qua gmail bằng cách click vào biểu tượng bên dưới để được giải quyết. Xin cảm ơn!
 expired_otp = Ma OTP da het han, OTP moi da duoc gui den email
-token_invalid = Chuoi xac thuc khong hop le. Vui long dang nhap lai
-not_permission_access = Khong duoc phep truy cap.
-token_expired = Tai khoan dang nhap da het han. Vui long dang nhap lai
-username_not_null=Ten dang nhap khong duoc de trong
-password_not_null = Mat khau khong duoc de trong
-username_not_nullpassword_not_null = Ten dang nhap va mat khau khong duoc de trong
+token_invalid = Chuỗi xác thực không hợp lệ. Vui lòng đăng nhập lại.
+not_permission_access = Không được phép truy cập.
+token_expired = Tài khoản đăng nhập đã hết hạn. Vui lòng đăng nhập lại.
+username_not_null=Tên đăng nhập không được để trống.
+password_not_null = Mật khẩu không được để trống.
+username_not_nullpassword_not_null = Tên đăng nhập và mật khẩu không được để trống.
+please-login-before-check-out = Vui lòng đăng nhập trước khi đặt hàng.
 
 
