--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <commons-beanutils.version>1.9.3</commons-beanutils.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   <dependencies>
     <dependency>
