--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,4 +38,11 @@
     <location>/views/web/error-404.jsp</location>
   </error-page>
 
+<!--  <jsp-config>-->
+<!--    <jsp-property-group>-->
+<!--      <url-pattern>/*</url-pattern>-->
+<!--      <page-encoding>UTF-8</page-encoding>-->
+<!--    </jsp-property-group>-->
+<!--  </jsp-config>-->
+
 </web-app>
