--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,19 +1,19 @@
 username_password_invalid = Tên đăng nhập hoặc mật khẩu không hợp lệ.
-not_permission = Khong co quyen dang nhap
-register_success = Dang ky thanh cong
-register_failed = Dang ky that bai
-duplicate_email = Email bi trung lap
-duplicate_phone = So dien thoai bi trung lap
-duplicate_username = Ten dang nhap bi trung lap
-duplicate_information =  Thong tin dang ky bi trung lap
-verify_success = Xac thuc thanh cong
-verify_failed = Sai OTP qua 5 lan, OTP moi da duoc gui den email
-verify_retry = Ma OTP khong dung, vui long thu lai
-unverified = Tai khoan chua duoc xac thuc, hay xac thuc tai khoan
-not_found_user = Khong tim thay username va email
-not_match_password = Nhap lai mat khau khong khop
+not_permission = Không có quyền truy cập
+register_success = Đăng ký thành công
+register_failed = Đăng ký thất bại
+duplicate_email = Email đã tồn tại
+duplicate_phone = Số điện thoại đã tồn tại
+duplicate_username = Tên đăng nhâp đã tồn tại
+duplicate_information =  Thông tin đăng ký đã tồn tại
+verify_success = Xác thực thành công
+verify_failed = Sai OTP quá 5 lần, OTP mới đã được gửi đến email
+verify_retry = Mã OTP không đúng, vui lòng thử lại
+unverified = Tài khoản chưa được xác thực, hãy xác thực tài khoản. OTP mới đã được gửi đến email
+not_found_user = Không tìm thấy tên đăng nhập và email
+not_match_password = Nhập lại mật khẩu không khớp
 username_is_block = Tài khoản của bạn đã bị khóa do vi phạm điều khoản. Vui lòng liên hệ qua gmail bằng cách click vào biểu tượng bên dưới để được giải quyết. Xin cảm ơn!
-expired_otp = Ma OTP da het han, OTP moi da duoc gui den email
+expired_otp = Mã OTP đã hết hạn, OTP mới đã được gửi đến email
 token_invalid = Chuỗi xác thực không hợp lệ. Vui lòng đăng nhập lại.
 not_permission_access = Không được phép truy cập.
 token_expired = Tài khoản đăng nhập đã hết hạn. Vui lòng đăng nhập lại.
